--- a/test/Accounts/reset-password.html
+++ b/test/Accounts/reset-password.html
@@ -18,7 +18,7 @@
         <form method="post" action="reset_password.php" name="reset_password" enctype="">
           <p>Enter your mobile number. We will send a code to your number with a password recovery code:</p>
           <div id="quick-form-div" class="outline-on-focus">
-            <input type="tel" name="reset_password" required id="" placeholder="Phone or Email">
+            <input type="text" name="reset_password" required id="" placeholder="Phone or Email">
             <input type="submit" value="SEARCH" class="background-color outline-on-focus">
           </div>
         </form>
