--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     <a href="https://github.com/SteveMuntanga" target="_blank"><img src="github.png" alt="icon" class="icon"></a>
     
     <a href="https://wa.me/+260977474190" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384095.png" alt="icon" class="icon"></a></div>
-      <div class="container px-5 mb-2">Copyright &copy; 2024 | Steve Wina Muntanga.</div>
+      <br><div class="container px-5 mb-2">Copyright &copy; 2024 | Steve Wina Muntanga.</div>
     </footer>
     <!-- End Footer -->
 
