--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                   <a class="nav-link me-lg-3" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-lg-3" href="#about">About</a>
+                  <a class="nav-link me-lg-3" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link me-lg-3" href="#Why-me">Why Me</a>
+                  <a class="nav-link me-lg-3" href="#why-me">Why Me</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link me-lg-3" href="#contact">Contact</a>
@@ -160,7 +160,7 @@
         <!-- End About -->
 
         <hr>
-        <div id="Why-me" class="container py-5">
+        <div id="why-me" class="container py-5">
           <div class="row justify-content-center text-center">
             <h2 class="fw-bold">Why Choose Me</h2>
             <p class="lead text-muted mb-5">
